# otus-cpp-basic

./: Ball.cpp  Ball.hpp  CMakeLists.txt  IContainer.hpp  IStatistics.hpp  List.hpp  Max.cpp  Max.hpp  Mean.cpp  Mean.hpp  Min.cpp  Min.hpp  README.md  StandartDeviation.cpp  StandartDeviation.hpp  Vector.hpp  World.cpp  handle_parameters.cpp  handle_parameters.h  hello_world.cpp  high_scores.cpp  high_scores.h  main.cpp
